[conflict] resolve conflict due to change genric repo

--- a/EXE201-Workshopista/appsettings.json
+++ b/EXE201-Workshopista/appsettings.json
@@ -14,6 +14,19 @@
     "Issuer": "https://localhost:7052/",
     "Audience": "https://localhost:7052/"
   },
+  "ZaloPayment": {
+    "appid": "554",
+    "key1": "8NdU5pG5R2spGHGhyO99HN1OhD8IQJBn",
+    "createOrderUrl": "https://sandbox.zalopay.com.vn/v001/tpe/createorder",
+    "redirectUrl": "api/Transaction/Callback"
+  },
+  "Firebase": {
+    "ServiceAccountKeyPath": "Extensions/Firebase-adminsdk.json",
+    "StorageBucket": "exe201-8a7e7.appspot.com",
+    "ProjectId": "exe201-8a7e7",
+    "ServiceAccountId": "firebase-adminsdk-73zc5@exe201-8a7e7.iam.gserviceaccount.com"
+  },
+  "ServerName": "https://localhost:7052/",
   "AllowedHosts": "*",
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
