--- a/EXE201-Workshopista/appsettings.json
+++ b/EXE201-Workshopista/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DBUtilsConnectionString": "Server=localhost;Database=EXE201-Workshopista;Uid=sa;Pwd=12345;TrustServerCertificate=true"
-    //"DBUtilsConnectionString": "Server=sqlserver;Database=EXE201-Workshopista;Uid=sa;Pwd=Password12345!;TrustServerCertificate=true"
+    //"DBUtilsConnectionString": "Server=localhost;Database=EXE201-Workshopista;Uid=sa;Pwd=12345;TrustServerCertificate=true"
+    "DBUtilsConnectionString": "Server=sqlserver;Database=EXE201-Workshopista;Uid=sa;Pwd=Password12345!;TrustServerCertificate=true"
   },
   "Jwt": {
     "Key": "v89h3bh89vh9ve8hc89nv98nn899cnccn998ev80vi809jberh89b",
