--- a/EXE201-Workshopista/appsettings.json
+++ b/EXE201-Workshopista/appsettings.json
@@ -5,27 +5,32 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "ConnectionStrings": {
-    //"DBUtilsConnectionString": "Server=localhost;Database=EXE201-Workshopista;Uid=sa;Pwd=12345;TrustServerCertificate=true"
-    "DBUtilsConnectionString": "Server=sqlserver;Database=EXE201-Workshopista;Uid=sa;Pwd=Password12345!;TrustServerCertificate=true"
+    "DBUtilsConnectionString": "Server=localhost;Database=EXE201-Workshopista;Uid=sa;Pwd=12345;TrustServerCertificate=true"
+    //"DBUtilsConnectionString": "Server=sqlserver;Database=EXE201-Workshopista;Uid=sa;Pwd=Password12345!;TrustServerCertificate=true"
   },
+
   "Jwt": {
     "Key": "v89h3bh89vh9ve8hc89nv98nn899cnccn998ev80vi809jberh89b",
     "Issuer": "https://localhost:7052/",
     "Audience": "https://localhost:7052/"
   },
+
   "ZaloPayment": {
     "appid": "554",
     "key1": "8NdU5pG5R2spGHGhyO99HN1OhD8IQJBn",
     "createOrderUrl": "https://sandbox.zalopay.com.vn/v001/tpe/createorder",
     "redirectUrl": "api/Transaction/Callback"
   },
+
   "Firebase": {
     "ServiceAccountKeyPath": "Extensions/Firebase-adminsdk.json",
     "StorageBucket": "exe201-8a7e7.appspot.com",
     "ProjectId": "exe201-8a7e7",
     "ServiceAccountId": "firebase-adminsdk-73zc5@exe201-8a7e7.iam.gserviceaccount.com"
   },
+
   "ServerName": "https://localhost:7052/",
   "AllowedHosts": "*",
   "Serilog": {
